# oc

./: .gitignore  CMakeLists.txt  oc.asd
lib/src/: foreign-libraries.lisp
src/: classes.lisp  finalizations.lisp  oc.i  oc.lisp  oc_wrap.cxx
src/brep-builder-api/: brep-builder-api-transform.lisp  brepbuilderapi.i
src/brep-fillet-api/: brep-fillet-api-make-fillet.lisp  brepfilletapi.i
src/brep-mesh/: brep-mesh-incremental-mesh.lisp  brep-mesh.i
src/brep-offset-api/: brep-offset-api-make-thick-solid.lisp  brepoffsetapi.i
src/brep-prim-api/: brep-prim-api-make-cylinder.lisp  brepprimapi.i
src/cpnts/: adaptor2d.i  adaptor3d.i  geom-adaptor-curve.lisp
src/examples/: examples.lisp
src/geom/: geom.i
src/geom2d/: geom2d.i
src/mmgt/: mmgt-tshared.i  mmgt-tshared.lisp
src/poly/: poly-triangulation.lisp  poly.i
src/shape-analysis/: shape-analysis-edge.i
src/shape-build/: shapebuild.i
src/shape-fix/: shapefix.i
src/top-tools/: toptools.i
src/topods/: topods.i
src/vis/: vis.i  vis.lisp
src/vis/ais/: ais-Interactive-object.i  ais-animation.i  ais-interactive-context.i
src/xscontrol/: step-control-Writer.lisp  xscontrol.i
util/: generate.sh
